--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       font-family: Arial, Helvetica, sans-serif;
       font-size: 2em;
     }
-    .edge { stroke: #ccc; stroke-width: 12px; cursor: pointer; }
+    .edge { stroke: #ccc; stroke-width: 12px; cursor: pointer; outline: none;}
     .blue { stroke: blue;}
     .red { stroke: red;}
     .vertex { fill: #999;}
