--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       font-family: Arial, Helvetica, sans-serif;
       font-size: 2em;
     }
-    .edge { stroke: #ccc; stroke-width: 12px; cursor: pointer; outline: none;}
+    .edge { stroke: #ccc;
+           stroke-width: 12px;
+           cursor: pointer;
+          -webkit-tap-highlight-color: rgba(0,0,0,0);}
     .blue { stroke: blue;}
     .red { stroke: red;}
     .vertex { fill: #999;}
