--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </head>
 <body>
 
-<svg id="svg"></svg>
 <div id="leveltext"></div>
+<svg id="svg"></svg>
 
 <script>
  // get level number from url
@@ -64,7 +64,7 @@ var y = d3.scaleLinear().domain([-1.1,1.1]).range([size, 0]);
 const svg = d3.select("#svg");
 svg.attr("width", size).attr("height", size);
 const leveltext = d3.select("#leveltext");
-leveltext.style("width", size+"px").style("height", size+"px");
+leveltext.style("width", size+"px");
 
 
 var numVertices = 0;
@@ -77,7 +77,7 @@ if(! isNaN(level)) {
   leveltext.classed("hidden", false);
   leveltext.html("<h1>Welcome to Ramsey game!</h1>\
   Colour each edge red or blue and avoid monochromatic triangles!<br/>\
-  <a href='?level=1'>level 1</a>");
+  <a href='?level=1'>Start level 1</a>");
 }
 
 
@@ -145,6 +145,8 @@ const edge = svg.selectAll(".edge")
   .classed("blue", d => d.colour == 1)
   .classed("red", d => d.colour == 2)
   .on("click", function(event,d) {
+    leveltext.classed("hidden", true);
+    leveltext.html("");
     console.log(event);
     d.colour = (d.colour + 1)%3;
     d3.select(this)
@@ -152,9 +154,8 @@ const edge = svg.selectAll(".edge")
       .classed("red", d => d.colour == 2);
     console.log(d.colour);
     if(checkWin()) {
-      svg.classed("hidden", true);
       leveltext.classed("hidden", false);
-      leveltext.html(`<h1>You won this level!</h1> <a href='?level=${level+1}'>level ${level+1}</a>`);
+      leveltext.html(`<h1>You won this level!</h1> <a href='?level=${level+1}'>Start level ${level+1}</a>`);
     };
   })
   ;
