--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     .red { stroke: red;}
     .vertex { fill: #999;}
     .hidden {display:none;}
+    /*     HERE Add a nex class for edges to highligh them, then use edge.classed() */
 
     .nav {
       list-style-type: none;
@@ -33,11 +34,18 @@
     
     .nav li {
       background-color: #4CAF50;
+      color: white;
       display: inline-block;
       font-size: 20px;
       margin: 0;
-      padding: 10px 10px;  
+      padding: 10px 10px;
+      cursor: pointer;
     }
+
+    //for disabling click on button 'I'm done'
+    .disabled{
+        pointer-events:none;
+    }    
 
     a {
       text-decoration: none;
@@ -105,16 +113,16 @@ const buttons = d3.select("#buttons");
 const startButton = d3.select("#startButton");
 
 const prevText = "Previous Level";
-const nextText = "Next Level";
 const resetText = "Reset";
+const nextText = "Next Level";
+const doneText = "I am done!";
 
 const prevButton = d3.select("#prev");
 const resetButton = d3.select("#reset");
 const nextButton = d3.select("#next");
   
-
-
 var numVertices = 0;
+  
 //Intro Page
 if(isNaN(level)) 
 {  
@@ -135,7 +143,8 @@ if(isNaN(level))
   startButton.classed("hidden", true);
 
   resetButton.html(`<a href='?level=${level}'>`+resetText+`</a>`);
-  nextButton.html(`<a href='?level=${level+1}'>`+nextText+`</a>`);
+  // nextButton.html(`<a href='?level=${level+1}'>`+nextText+`</a>`);
+  nextButton.html(doneText);
   
   
   if(level==1){
@@ -212,14 +221,12 @@ const edge = graph.selectAll(".edge")
   .on("click", function(event,d) {
     leveltext.classed("hidden", false);
     leveltext.html("");
+    nextButton.classed("disabled",false);
+    nextButton.html(doneText);
     d.colour = (d.colour + 1)%3;
     d3.select(this)
       .classed("blue", d => d.colour == 1)
       .classed("red", d => d.colour == 2);
-    if(checkWin()) {
-      leveltext.classed("hidden", false);
-      leveltext.html(`<h1>You won this level!</h1>`);
-    };
   })
   ;
 
@@ -232,6 +239,19 @@ const vertex = graph.selectAll(".vertex")
   .attr("r", 12)
   .attr("cx", d => x(d.x))
   .attr("cy", d => y(d.y));
+
+//(I'm done/next level) button code
+const c = nextButton.on("click", () => {
+    if(checkWin()) {
+      leveltext.classed("hidden", false);
+      leveltext.html(`<h2>You won this level!</h2>`);
+      nextButton.classed("disabled",true);
+      nextButton.html(`<a href='?level=${level+1}'>`+nextText+`</a>`);
+    } else {
+      leveltext.classed("hidden", false);
+      leveltext.html(`<h2>No you're not!</h2>`);      
+    };
+});
 
 </script>
 
