--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
           -webkit-tap-highlight-color: rgba(0,0,0,0);}
     .blue { stroke: blue;}
     .red { stroke: red;}
+    .green { stroke: green;} 
     .vertex { fill: #999;}
     .hidden {display:none;}
-    /*     HERE Add a nex class for edges to highligh them, then use edge.classed() */
+    .highlightred{filter: drop-shadow(0 0 10px rgb(255, 0, 0));}
+    .highlightblue{filter: drop-shadow(0 0 10px rgb(0, 0, 255));}
+    .highlightwhite{filter: drop-shadow(0 0 10px rgb(255, 255, 255));}
 
     .nav {
       list-style-type: none;
@@ -46,6 +49,8 @@
     .disabled{
         pointer-events:none;
     }    
+
+
 
     a {
       text-decoration: none;
@@ -111,7 +116,7 @@ const leveltext = d3.select("#leveltext");
 leveltext.style("width", size+"px");
 const buttons = d3.select("#buttons");
 const startButton = d3.select("#startButton");
-
+  
 const prevText = "Previous Level";
 const resetText = "Reset";
 const nextText = "Next Level";
@@ -122,6 +127,12 @@ const resetButton = d3.select("#reset");
 const nextButton = d3.select("#next");
   
 var numVertices = 0;
+
+//these will contains the edges we highlight in case of error
+var ed0;
+var ed1;
+var ed2;
+var ed3;
   
 //Intro Page
 if(isNaN(level)) 
@@ -132,6 +143,8 @@ if(isNaN(level))
   //leveltext.classed("hidden", false);
   leveltext.html("<h1>Welcome to Ramsey game!</h1>\
   Colour each edge red or blue and avoid monochromatic triangles!<br/>");
+  
+
   
 } else { /*other levels*/
   numVertices = level+2;
@@ -171,7 +184,9 @@ for(var i=0; i < numVertices-1; i++) {
     var newEdge = {
       from: vertices[i],
       to: vertices[j],
-      colour: 0
+      colour: 0,
+      vertexi: i,
+      vertexj: j
     }
     edges.push(newEdge);
     edgeByIndex[i*numVertices+j] = newEdge;
@@ -180,12 +195,12 @@ for(var i=0; i < numVertices-1; i++) {
 }
 
 // function to test if won
-function checkWin() {
+function checkWin() { //return boolean,color,e0,e1,e2
   for(var i=0; i < numVertices-1; i++) {
     for(var j=i+1; j < numVertices; j++) {
       var e0 = edgeByIndex[i*numVertices+j];
       if(e0.colour == 0) {
-        return false;
+        return [false,0,i,j,0]; 
       }
     }
   }
@@ -198,13 +213,13 @@ function checkWin() {
         var e2 = edgeByIndex[k*numVertices+i];
         if(e0.colour == e1.colour && e0.colour == e2.colour)
         {
-          return false;
+          return [false,e0.colour,i,j,k]; 
         }
       }
     }
   }
 
-  return true;
+  return [true,0,0,0,0];
 }
 
 // Add lines for edges
@@ -212,6 +227,7 @@ const edge = graph.selectAll(".edge")
   .data(edges)
   .join("line")
   .attr("class", "edge")
+  .attr("id",d=>[d.vertexi,d.vertexj])  //I need an id because I want to access that edge to highligh
   .attr("x1", d=>x(d.from.x))
   .attr("x2", d=>x(d.to.x))
   .attr("y1", d=>y(d.from.y))
@@ -227,6 +243,16 @@ const edge = graph.selectAll(".edge")
     d3.select(this)
       .classed("blue", d => d.colour == 1)
       .classed("red", d => d.colour == 2);
+
+    //we remove the highlight class
+    //if ed,ed1ed2ed3 are defined, it's from highlight
+    try {d3.select(ed0).classed("highlightwhite",false);} catch(e) {};
+    try {d3.select(ed1).classed("highlightred",false);  } catch(e) {};   
+    try {d3.select(ed2).classed("highlightred",false);  } catch(e) {}; 
+    try {d3.select(ed3).classed("highlightred",false);  } catch(e) {};
+    try {d3.select(ed1).classed("highlightblue",false); } catch(e) {};    
+    try {d3.select(ed2).classed("highlightblue",false); } catch(e) {};  
+    try {d3.select(ed3).classed("highlightblue",false); } catch(e) {};  
   })
   ;
 
@@ -242,14 +268,35 @@ const vertex = graph.selectAll(".vertex")
 
 //(I'm done/next level) button code
 const c = nextButton.on("click", () => {
-    if(checkWin()) {
+    const check = checkWin(); //boolean, color,i,j,k
+    if(check[0]) {
       leveltext.classed("hidden", false);
-      leveltext.html(`<h2>You won this level!</h2>`);
+      leveltext.html(`<h3>You won this level!</h3>`);
       nextButton.classed("disabled",true);
       nextButton.html(`<a href='?level=${level+1}'>`+nextText+`</a>`);
     } else {
       leveltext.classed("hidden", false);
-      leveltext.html(`<h2>No you're not!</h2>`);      
+      leveltext.html(`<h3>No you're not!</h3>`);   
+      if(check[1]==0){ //there is a white edge
+        id = [check[2],check[3]];
+        ed0 = document.getElementById(id);
+        d3.select(ed0).classed("highlightwhite",true); //wrks, but we would need to remove highlight
+      } else
+      {
+        id1 = [check[2],check[3]];
+        id2 = [check[2],check[4]];
+        id3 = [check[3],check[4]];
+
+        //ed's have been decalred globally
+        ed1 = document.getElementById(id1);
+        ed2 = document.getElementById(id2);
+        ed3 = document.getElementById(id3);
+        //applying red highliight to blue, and vice-versa
+        if(check[1]==1){txthigh = "highlightred"}else{txthigh = "highlightblue"}
+        d3.select(ed1).classed(txthigh,true);
+        d3.select(ed2).classed(txthigh,true);
+        d3.select(ed3).classed(txthigh,true);
+      }
     };
 });
 
